Added comments and fixed some spacing issues

--- a/LDRA_Styles1.css
+++ b/LDRA_Styles1.css
@@ -108,7 +108,7 @@ form{
 #footercontainer { 
     padding: 3em;
     font-family: rockwell;
-    font-size: 1em;
+    font-size: .5em;
 }
 
     /******************  
