--- a/LDRA_Styles1.css
+++ b/LDRA_Styles1.css
@@ -38,7 +38,7 @@ nav a {
     ****************/
 
 .primaryContent h1 {
-    background: url("images/runningdog.jpg") no-repeat center center;
+    background: url("Images/Runningdog.jpg") no-repeat center center;
     height: 355px;
     background-size: cover;
     font-size: 115px;
