--- a/LDRA_Styles1.css
+++ b/LDRA_Styles1.css
@@ -38,8 +38,7 @@ nav a {
     ****************/
 
 .primaryContent h1 {
-    background: url('img/Runningdog.jpg') no-repeat center center;
-    
+    background: url('img/Runningdog.jpg') no-repeat center center; 
     height: 400px;
     background-size: cover;
     font-size: 115px;
@@ -107,9 +106,11 @@ form{
 }
 
 #footercontainer { 
+    background: url('img/Dogface.jpg') no-repeat center center; 
+    height: 400px;
     padding: 3em;
     font-family: rockwell;
-    font-size: .5em;
+    font-size: 1.2em;
 }
 
     /******************  
